@@ -25,6 +25,7 @@ Revision:
 * #783: fixed OpenID Login switcher (Phoenyx)
 * #787: Properly modifies the imagecategory table during an upgrade from previous versions (skenow)
 * #351: imProfile: fixed field option handling on search form | ticket from addons (Phoenyx)
+* #790: Adding new symlinks during upgrade (skenow)
 
 === Impresscms 1.2 Beta ===
 Release date: 5 Sep 2009
